<resources>
    <string name="app_name">Crush Love Calculator</string>
    <string name="term_of_service">Term of service</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="privacy_policy_agree">AGREE AND CONTINUE</string>
    <string name="privacy_policy_text">By continuing, you agree to \n Term of service and Privacy policy</string>
    <string name="home_setting">Setting</string>
    <string name="home_connect">Connect</string>
    <string name="home_my_photo">My photo</string>
    <string name="home_play_game">Play game</string>
    <string name="home_card_love">Card Love</string>
    <string name="home_love_time">Love Time</string>
    <string name="home_diary_love">Diary Love</string>
    <string name="home_your_name">Your Name</string>
    <string name="profile_title">My Profile</string>
    <string name="crush_title">Crush\'s Info</string>
    <string name="profile_default_avatar"><u>Default image</u></string>
    <string name="profile_name">What\'s your name?</string>
    <string name="crush_name">What\'s crush\'s name?</string>
    <string name="profile_country">Country</string>
    <string name="profile_date_of_birth">What\'s your date of birth?</string>
    <string name="crush_date_of_birth">What\'s crush\'s date of birth?</string>
    <string name="profile_job">What is your job?</string>
    <string name="profile_height">What\'s your height?</string>
    <string name="profile_weight">How much do you weight?</string>
    <string name="profile_update">Update</string>
    <string-array name="height_unit">
        <item>Cm</item>
        <item>Inch</item>
    </string-array>
    <string-array name="weight_unit">
        <item>Kg</item>
        <item>Pound</item>
    </string-array>
    <string name="profile_set_birthday">Set</string>
    <string-array name="months_short_hand">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="profile_avatar_dialog_title">Avatar</string>
    <string name="profile_avatar_dialog_camera">Camera</string>
    <string name="profile_avatar_dialog_gallery">Gallery</string>
    <string name="profile_nation_dialog_title">Select a country</string>
    <string name="profile_job_dialog_title">Select your job</string>
    <string name="profile_nation_dialog_search">Search…</string>
    <string name="profile_height_unit_cm">Cm</string>
    <string name="profile_height_unit_inch">Inch</string>
    <string name="profile_weight_unit_kg">Kg</string>
    <string name="profile_weight_unit_pound">Pound</string>
    <string name="profile_invalid_age_toast">Minimum age for starting relationship is 16 year old.</string>
    <string name="profile_update_success">Update successfully</string>
    <string name="profile_default_country">Vietnam</string>
    <string name="love_test_title">Choose Test Method</string>
    <string-array name="test_name">
        <item>Photo</item>
        <item>Name</item>
        <item>Fingerprint</item>
        <item>Birthday</item>
        <item>Nationality</item>
        <item>BMI</item>
        <item>Job</item>
    </string-array>
    <string name="love_test_your_name">Your name</string>
    <string name="love_test_crush_name">Crush\'s name</string>
    <string name="love_test_your_image">Your photo</string>
    <string name="love_test_crush_image">Crush\'s photo</string>
    <string name="love_test_start_test">Start test</string>
    <string name="love_test_photo_title">Photo Match</string>
    <string name="love_test_photo_error">Error</string>
    <string name="love_test_photo_no_photo">You must upload a photo to test</string>
    <string name="love_test_name_title">Name Match</string>
    <string name="love_test_name_error">Please give this a name</string>
    <string name="love_test_birthday_title">Birthday Match</string>
    <string name="love_test_birthday_error">Please give this a date birthday</string>
    <string name="love_test_birthday_you">You</string>
    <string name="love_test_birthday_crush">Crush</string>
    <string name="love_test_birthday_your_date">Your birthday</string>
    <string name="love_test_birthday_crush_date">Crush\'s birthday</string>
    <string name="love_test_nation_title">Nationality Match</string>
    <string name="love_test_bmi_title">BMI Match</string>
    <string name="love_test_bmi_weight">Weight</string>
    <string name="love_test_bmi_height">Height</string>
    <string name="love_test_bmi_error">Please give this valid height and weight</string>
    <string name="love_test_job_title">Job Match</string>
    <string name="love_test_job_error">Please give this a job</string>
    <string name="love_test_job_your_job_hint">Your\'s job title</string>
    <string name="love_test_job_crush_job_hint">Crush\'s job title</string>
    <string name="love_test_fingerprint_title">Fingerprint Match</string>
    <string name="love_test_fingerprint_yours">Your Fingerprint</string>
    <string name="love_test_fingerprint_crushs">Crush\'s Fingerprint</string>
    <string name="love_test_fingerprint">\'s fingerprint</string>
    <string name="love_test_fingerprint_error">You must scan your fingerprint to test</string>
    <string name="love_test_network_error_title">Network error</string>
    <string name="love_test_network_error_msg">No internet connection. Please connect internet</string>
    <string name="love_test_bad_network_title">Bad network</string>
    <string name="love_test_bad_network_msg">Please try to connect to a better network</string>
    <string name="love_test_result_title">Result</string>
    <string-array name="test_result_default">
        <item>Need to keep trying</item>
        <item>Cultivate more</item>
        <item>Belong Together</item>
        <item>Real Love</item>
        <item>Wonderful Couple</item>
        <item>Perfect Couple</item>
    </string-array>
    <string name="love_test_result_test_again">Test again</string>
    <string name="love_test_result_share">Share</string>
    <string name="love_test_result_height">Height:</string>
    <string name="love_test_result_weight">Weight:</string>
    <string name="love_test_result_download_success">Photo downloaded to My Photo</string>
    <string name="love_test_result_you">You</string>
    <string name="love_test_result_crush">Crush</string>
    <string name="love_test_result_success">Success</string>
    <string name="love_time_enter_start_love">Some love time information is missing!</string>
    <string name="my_photo_title">My Photo</string>
    <string name="my_photo_selected">selected</string>
    <string name="my_photo_empty_selected">No item selected</string>
    <string name="my_photo_dialog_cancel">Cancel</string>
    <string name="my_photo_dialog_oke">Ok</string>
    <string name="my_photo_dialog_newest">Newest date first</string>
    <string name="my_photo_dialog_oldest">Oldest date first</string>
    <string name="my_photo_dialog_sort">Sort by</string>
    <string name="my_photo_dialog_confirm">Confirm?</string>
    <string name="my_photo_dialog_message_prefix">Are you sure you want to delete</string>
    <plurals name="my_photo_item">
        <item quantity="one">item?</item>
        <item quantity="other">items?</item>
    </plurals>
    <string name="my_photo_dialog_message_suffix">It cannot be undone</string>
    <string name="my_photo_empty">There is nothing here</string>
    <string name="my_photo_dialog_message_detail">Are you sure you want to delete this item? It cannot be undone</string>
    <string name="my_photo_delete_success">Delete success</string>
    <string name="my_photo_detail_title">Detail</string>
    <string name="my_photo_default_photo_bucket">Other</string>
    <string name="unable_create_viewmodel">Unable create ViewModel</string>
    <string name="album_name_all">All Media</string>
    <string name="empty_text">Empty</string>
    <string name="grant_permission">Please grant the application permission to continue using the app</string>
    <string name="goto_settings">You must approve this permission in Permissions in the app settings on your device to continue using the app.</string>
    <string name="settings">Settings</string>
    <string name="unknown">Unknown</string>
    <string name="empty">Empty</string>
    <string name="no_result">No Result</string>
    <string name="image_error">Image Error</string>
    <string name="gallery_dialog_title">Photos</string>
    <string-array name="arrays_name_of_button">
        <item>Love Test</item>
        <item>Card Love</item>
        <item>Love Time</item>
        <item>Diary Love</item>
        <item>My Photo</item>
        <item>Event</item>
        <item>Connect</item>
        <item>Play Game</item>
        <item>Setting</item>
    </string-array>
    <string name="been_together">Been together</string>
    <string name="title_success">Success</string>
    <string name="title_error">Error</string>
    <string name="title_warning">Warning</string>
    <string name="action_done">Done</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>
    <string name="action_sort_by">Sort by</string>
    <string name="action_select_all">Select all</string>
    <string name="today_last_modified">Today</string>
    <string name="yesterday_last_modified">Yesterday</string>
    <string name="start_falling_in_love">Relationship start date</string>
    <plurals name="item_size">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>
    <string name="select_items">Select items</string>
    <string name="empty_list">Empty list!</string>
    <plurals name="msg_delete_file">
        <item quantity="one">Do you want to permanently delete %d file?</item>
        <item quantity="other">Do you want to permanently delete %d files?</item>
    </plurals>
    <string name="delete_title">Delete file</string>
    <string name="love_time_your_name">Your name</string>
    <string name="love_time_crush_name">Crush\'s name</string>
    <string name="love_time_honey_name_dialog">You</string>
    <string name="love_time_my_beloved_name_dialog">Crush</string>
    <string name="string_favorite">Favorite</string>
    <string name="add_event">Add event</string>
    <string name="share_friends">Share friends</string>
    <string name="change_background">Change background</string>
    <string name="change_theme">Change theme</string>
    <string name="change_emoji_connection">Change emoji connection</string>
    <string name="retry">Retry</string>
    <string name="title_preview">Preview</string>
    <string name="set_as">Set as</string>
    <string name="select_theme">Select theme</string>
    <string name="string_lovetime_emoij_no_internet">No internet</string>
    <string name="string_lovetime_emoij_you_offline">You are offine. Please check your internet connection an try again</string>
    <string name="string_calendar">Calendar</string>
    <string name="string_sunday">Sun</string>
    <string name="string_monday">Mon</string>
    <string name="string_tuesday">Tue</string>
    <string name="string_wednesday">Wed</string>
    <string name="string_thursday">Thu</string>
    <string name="string_friday">Fri</string>
    <string name="string_saturday">Sat</string>
    <string name="string_no_diary_on_day">No Diary On This Day</string>
</resources>