<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_sheet"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            style="@style/BottomSheetTitle"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:text="@string/my_photo_dialog_confirm"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:layout_marginVertical="@dimen/dp_8"
            android:gravity="center"
            android:textAppearance="?textAppearanceBody1" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/dp_32">

            <TextView
                android:id="@+id/btCancel"
                style="@style/ConfirmButton"
                android:layout_marginVertical="@dimen/dp_16"
                android:background="@drawable/bg_confirm_cancel"
                android:paddingVertical="@dimen/dp_8"
                android:text="@string/my_photo_dialog_cancel"
                android:textColor="?android:textColorSecondary" />

            <TextView
                android:id="@+id/btAgree"
                style="@style/ConfirmButton"
                android:layout_marginVertical="@dimen/dp_16"
                android:layout_marginStart="@dimen/dp_32"
                android:background="@drawable/bg_profile_update_left"
                android:paddingVertical="@dimen/dp_8"
                android:text="@string/my_photo_dialog_oke" />

        </LinearLayout>
    </LinearLayout>
</layout>